Fixng css for reference tables to prevent overflows.

--- a/docs/next/styles/globals.css
+++ b/docs/next/styles/globals.css
@@ -589,7 +589,6 @@ pre[class="noop"] {
     border-radius: 0 !important;
 }
 
-
 .n {
   font-weight: 700;
 }
@@ -604,4 +603,8 @@ pre[class="noop"] {
 
 dl, dl * {
   overflow-wrap: break-word;
+}
+
+td {
+  word-break:break-word
 }
